2010-03-15  Valters Svabe  <vsvabe@gmail.com>

Reviewed by Darin Adler.

        :after selector displays in wrong place with nested div
        https://bugs.webkit.org/show_bug.cgi?id=32288

        * fast/css-generated-content/block-after-expected.txt: Added.
        * fast/css-generated-content/block-after.html: Added.
2010-03-15  Valters Svabe  <vsvabe@gmail.com>

        Reviewed by Darin Adler.

        :after selector displays in wrong place with nested div
        https://bugs.webkit.org/show_bug.cgi?id=32288

        Make sure we don't append things after :after-generated content, if
        it's inside an anonymous block.

        Test: fast/css-generated-content/block-after.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::addChild):

Canonical link: https://commits.webkit.org/47328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56033 268f45cc-cd09-0410-ab3c-d52691b4dbfc